premature unescaping of html
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3954 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -460,6 +460,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * budowanie: w katalogach modu³ów tworz± siê proste Makefile'e (cele: all,
   install, clean, distclean) (joi)
 * budowanie: poprawa b³êdu tworzenia plików zale¿no¶ci przy --enable-final (joi)
+* poprawiony b³±d usuwania tekstu <span style=""></span> z tre¶ci wiadomo¶ci (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
