--- a/ChangeLog
+++ b/ChangeLog
@@ -461,6 +461,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   install, clean, distclean) (joi)
 * budowanie: poprawa b³êdu tworzenia pustych plików zale¿no¶ci przy --enable-final (joi)
 * poprawiony b³±d usuwania tekstu <span style=""></span> z tre¶ci wiadomo¶ci (joi)
+* poprawione akcje ignorowania i blokowania (neeo)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
