--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodany do autodownloadu modu³ profiles (joi)
 * poprawna obs³uga b³êdów odczytu obrazków do wys³ania (joi)
 * uaktualnienie libgadu do najnowszej wersji (neeo)
+* dodane nowe pule numerów u wszystkich operatorów (neeo)
+* poprawa obs³ugi b³êdów dla bramki Ery (neeo)
 
 +++ wersja 0.4.3 (30.11.2005)
 * opcja ignorowania formatowania tekstu i obrazków od anonimów, domy¶lnie w³±czona (adrian)
