--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawa obs³ugi b³êdów dla bramki Ery (neeo)
 * poprawiony b³±d usuwania tekstu <span style=""></span> z tre¶ci wiadomo¶ci (joi)
 * aktualizacja gnuconfig do wersji 2006.08.14 (joi)
+* niewielka poprawka do skryptu configure, pomagaj±ca w kompilacji na OpenBSD (Prezu/joi)
 
 +++ wersja 0.4.3 (30.11.2005)
 * opcja ignorowania formatowania tekstu i obrazków od anonimów, domy¶lnie w³±czona (adrian)
