firefox@ubuntu path discovery ;)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3986 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * aktualizacja gnuconfig do wersji 2006.08.14 (joi)
 * niewielka poprawka do skryptu configure, pomagaj±ca w kompilacji na OpenBSD (Prezu/joi)
 * dopisane do rotacji 6 nowych adresów serwerów gg (joi)
+* poprawione wykrywanie ¶cie¿ki do firefoksa na ubuntu (joi)
 
 +++ wersja 0.4.3 (30.11.2005)
 * opcja ignorowania formatowania tekstu i obrazków od anonimów, domy¶lnie w³±czona (adrian)
