--- a/ChangeLog
+++ b/ChangeLog
@@ -472,6 +472,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   opcja SaveStdErr w sekcji General + mo¿liwo¶æ zmiany tej warto¶ci
   przez zmienn± ¶rodowiskow± SAVE_STDERR (0 lub 1) (joi)
 * poprawione wykrywanie ¶cie¿ki do firefoksa na ubuntu (joi)
+* domy¶lnie w³±czona opcja ukrywania podstawowych modu³ów w oknie mened¿era modu³ów (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
