--- a/ChangeLog
+++ b/ChangeLog
@@ -474,6 +474,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione wykrywanie ¶cie¿ki do firefoksa na ubuntu (joi)
 * domy¶lnie w³±czona opcja ukrywania podstawowych modu³ów w oknie mened¿era modu³ów (joi)
 * dodana mo¿liwo¶æ ustawienia wysoko¶ci separatorów w oknie rozmowy (joi)
+* zaaplikowana ³ata Vogela porz±dkuj±ca konfigurowalne toolbary (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
