montor patch; actions tweaks
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4001 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -482,6 +482,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * jako ¿e od 0.5 modu³ ext_sound koliduje z innymi modu³ami d¼wiêkowymi,
   to wy³±czamy go przy migracji, dziêki czemu przy nastêpnym uruchomieniu
   nie dostaniemy brzydkiej wiadomo¶ci o konflikcie modu³ów (joi)
+* zaaplikowana ³ata montora, poprawiaj±ca dzia³anie akcji typu toggle (neeo)
+* poprawki w akcjach ukrywaj±cych kontakty niedostêpne i bez opisu,
+  oraz akcji wysy³ania wiadomo¶ci (neeo)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
