--- a/ChangeLog
+++ b/ChangeLog
@@ -487,6 +487,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   oraz akcji wysy³ania wiadomo¶ci (neeo)
 * nie pokazujemy g³ównego okna programu przy zamykaniu sesji gdy tacka systemowa
   / obszar powiadamiania / itp. wy³±cza siê przed Kadu (joi)
+* je¿eli przy starcie programu nie uda siê otworzyæ g³ównego pliku konfiguracyjnego,
+  to próbujemy otworzyæ ostatni backup; zaraz po uruchomieniu i tu¿ przed procedur±
+  zamkniêcia robimy kopiê pliku konfiguracyjnego (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
