--- a/ChangeLog
+++ b/ChangeLog
@@ -490,6 +490,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * je¿eli przy starcie programu nie uda siê otworzyæ g³ównego pliku konfiguracyjnego,
   to próbujemy otworzyæ ostatni backup; zaraz po uruchomieniu i tu¿ przed procedur±
   zamkniêcia robimy kopiê pliku konfiguracyjnego (joi)
+* przycisk szyfrowania ustawia poprawny stan po dodaniu do okna rozmowy (neeo)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
