--- a/ChangeLog
+++ b/ChangeLog
@@ -495,6 +495,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione zasiêgi niektórych akcji (neeo)
 * poprawka poprawki w module encryption (neeo)
 * poprawione zachowanie akcji w oknie wyszukiwania (neeo)
+* przy blokowaniu anonimowych kontaktów pojawia sie komunikat informacyjny (neeo)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
