--- a/ChangeLog
+++ b/ChangeLog
@@ -500,6 +500,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zmienione dzia³anie akcji blokuj±cej dla kilku kontaktów - odblokowanie 
   nastêpuje wy³±cznie, gdy wszyscy byli zablokowani, w przeciwnym wypadku
   niezablokowane kontakty zostaj± zablokowane (neeo)
+* poprawny zapis w historii wiadomo¶ci SMS zawieraj±cych znaki <> (montor/neeo)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
