--- a/ChangeLog
+++ b/ChangeLog
@@ -503,6 +503,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawny zapis w historii wiadomo¶ci SMS zawieraj±cych znaki <> (montor/neeo)
 * pozycje "Wyczy¶æ historiê" i "Poka¿ historiê" nie s± blokowane dla nas samych
   w popupie na li¶cie kontaktów (montor/neeo)
+* dodany do autodownloadu modu³ advanced_userlist (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
