fix for parser which removed all text before ']} when there was no `[{ character before...
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4028 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -507,6 +507,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * 0.5.0-rc1
 * poprawka instalacji modu³ów przy make install_nazwamodu³u gdy katalogi docelowe
   jeszcze nie istniej± (joi)
+* poprawka parsera Kadu, który usuwa³ wszystkie znaki przed ']}, je¿eli
+  nie by³o wcze¶niej (odpowiednio) znaków `[{ (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
