--- a/ChangeLog
+++ b/ChangeLog
@@ -513,6 +513,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   ca³ego okna (FuKu/joi)
 * poprawka wywrotki gdy w trakcie szukania serwera w konfiguracji zostanie zmieniona
   lista serwerów (joi)
+* poprawione budowanie paczki na MacOSX (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
