fix safari discovery
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4036 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -515,6 +515,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   lista serwerów (joi)
 * poprawione budowanie paczki na MacOSX (joi)
 * akcje nie umo¿liwiaj± blokowania i ignorowania nas samych (neeo)
+* poprawione wykrywanie przegl±darki Safari na MacOSX (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
