--- a/ChangeLog
+++ b/ChangeLog
@@ -516,6 +516,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione budowanie paczki na MacOSX (joi)
 * akcje nie umo¿liwiaj± blokowania i ignorowania nas samych (neeo)
 * poprawione wykrywanie przegl±darki Safari na MacOSX (joi)
+* usuniêty niewielki wyciek pamiêci przy ka¿dej akcji wywo³ywanej przez
+  przycisk z g³ównego okna (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
