crash in search dialog when nobody is selected and user clicks "add user" or "chat"
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4041 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -519,6 +519,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêty niewielki wyciek pamiêci przy ka¿dej akcji wywo³ywanej przez
   przycisk z g³ównego okna (joi)
 * poprawka wywrotki przy usuwaniu przycisku z toolbara wyci±gniêtego poza okno (joi)
+* poprawka wywrotki w oknie szukania w katalogu przy naci¶niêciu "rozmowa" lub
+  "dodaj wybrany kontakt" gdy ¿adna pozycja nie jest zaznaczona (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
