--- a/ChangeLog
+++ b/ChangeLog
@@ -537,6 +537,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * autoresponder: domy¶lnie w³±czona opcja ignorowania konferencji (joi)
 * MacOSX: ³adniejsza ikonka aplikacji (MAX/joi)
 * blokowanie pasków narzêdziowych dzia³a jak powinno - nie da siê zrobiæ nic (joi)
+* poprawka kompatybilno¶ci autodownloadu ze starymi shellami (m.in. na MacOSX) -
+  autodownload wywraca³ siê na starym zestawie emotikon (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
