macosx: creating universal binary
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4067 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -539,6 +539,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * blokowanie pasków narzêdziowych dzia³a jak powinno - nie da siê zrobiæ nic (joi)
 * poprawka kompatybilno¶ci autodownloadu ze starymi shellami (m.in. na MacOSX) -
   autodownload wywraca³ siê na starym zestawie emotikon (joi)
+* dodany skrypt u³atwiaj±cy tworzenie Universal Binary dla MacOSX (MAX, joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
