--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,12 @@ podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
 +++ wersja 0.6.0-svn
+* zmiany w procedurze ³±czenia siê: (joi)
+  - ekspresowe ³±czenie siê z serwerem gg (zapamiêtujemy adres serwera,
+  do którego ostatnio uda³o siê podpi±æ)
+  - losujemy kolejno¶æ ³±czenia siê z serwerami
+  - gdy nie uda siê po³±czyæ na porcie 8074, próbujemy na 443
+  - dodane do rotacji 2 nowe serwery
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
