--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   byæ u¿ywane przez modu³y (joi)
 * nie pokazujemy okna z komunikatem o zablokowanym profilu, tylko
   pokazujemy g³ówne okno programu (joi)
+* zapisujemy atrybuty czcionek wybranych w konfiguracji (montor/joi)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
