--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nie pokazujemy okna z komunikatem o zablokowanym profilu, tylko
   pokazujemy g³ówne okno programu (joi)
 * zapisujemy atrybuty czcionek wybranych w konfiguracji (montor/joi)
+* mo¿liwo¶æ pomijania czasu serwera dla wiadomo¶ci przychodz±cych,
+  gdy ró¿nica z czasem lokalnym jest niewielka (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
