--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zapisujemy atrybuty czcionek wybranych w konfiguracji (montor/joi)
 * mo¿liwo¶æ pomijania czasu serwera dla wiadomo¶ci przychodz±cych,
   gdy ró¿nica z czasem lokalnym jest niewielka (neeo)
+* zmiana uk³adu menu PPM na kontakcie - wydzielone 'Zarz±dzanie
+  kontaktami (FuKu,neeo)
+* nowa pozycja w menu kontaktu, pozwalaj±ca na otwarcie w przegl±darce
+  linku z opisu (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
