parse status in KaduParses
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4083 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   kontaktami (FuKu,neeo)
 * nowa pozycja w menu kontaktu, pozwalaj±ca na otwarcie w przegl±darce
   linku z opisu (neeo)
+* mo¿liwo¶æ parsowania opisu statusu przez parser Kadu (Dorregaray/neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
