--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nowa pozycja w menu kontaktu, pozwalaj±ca na otwarcie w przegl±darce
   linku z opisu (neeo)
 * mo¿liwo¶æ parsowania opisu statusu przez parser Kadu (Dorregaray/neeo)
+* domy¶lna sk³adnia dymków korzysta z pola Wy¶wietlane (arvenil/neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
