window_notify: new message & new chat works again
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4085 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   linku z opisu (neeo)
 * mo¿liwo¶æ parsowania opisu statusu przez parser Kadu (Dorregaray/neeo)
 * domy¶lna sk³adnia dymków korzysta z pola Wy¶wietlane (arvenil/neeo)
+* window_notify: powiadamianie o nowej rozmowie i nowej wiadomo¶ci znowu dzia³a (joi)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
