added myself to AUTHORS file
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4089 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,8 @@ programista
 Dawid Stawiarski <neeo (at) kadu (dot) net>
 programista
 
+Rafa³ Malinowski <vogel (at) kadu (dot) net>
+programista
 
  Ludzie którzy nie wspieraj± ju¿ aktywnie projektu:
 ============================================================
