simplify code of Hints module
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4091 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * configure: przy szukaniu bibliotek u¿ywamy $CXX, a nie $CC (joi)
 * poprawka wywrotki przy naci¶niêciu prawego przycisku na li¶cie kontaktów
   w specyficznych okoliczno¶ciach (joi)
+* refaktoryzacja modu³u hints (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
