--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka wywrotki przy naci¶niêciu prawego przycisku na li¶cie kontaktów
   w specyficznych okoliczno¶ciach (joi)
 * refaktoryzacja modu³u hints (Vogel)
+* nowe okno przesy³ania plików (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
