--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w specyficznych okoliczno¶ciach (joi)
 * refaktoryzacja modu³u hints (Vogel)
 * nowe okno przesy³ania plików (Vogel)
+* obs³uga wywo³añ zwrotnych w notify (Vogel)
+* obs³uga wywo³añ zwrotnych w window_notify (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
