--- a/ChangeLog
+++ b/ChangeLog
@@ -29,10 +29,13 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w specyficznych okoliczno¶ciach (joi)
 * refaktoryzacja modu³u hints (Vogel)
 * nowe okno przesy³ania plików (Vogel)
-* usuniêty b³±d zwi±zany z SIGPIPE przy transferze plików w dcc (bardzo rzadko wystêpuj±cy) (Vogel)
+* usuniêty b³±d zwi±zany z SIGPIPE przy transferze plików w dcc (bardzo rzadko
+  wystêpuj±cy) (Vogel)
 * obs³uga wywo³añ zwrotnych w notify (Vogel)
 * obs³uga wywo³añ zwrotnych w window_notify (Vogel)
 * modu³ dcc korzysta z wywo³añ zwrotnych w notify (Vogel)
+* poprawka wywkrywania execinfo (obs³uga backtrace'ów) po ostatnich zabawach
+  z configure (joi)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
