--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * modu³ dcc korzysta z wywo³añ zwrotnych w notify (Vogel)
 * poprawka wywkrywania execinfo (obs³uga backtrace'ów) po ostatnich zabawach
   z configure (joi)
+* w Makefile'ach modu³ów nowy cel: update-translations (joi)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
