--disable-autodownload and tweaks to update-translations makefile target
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4108 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -37,6 +37,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka wywkrywania execinfo (obs³uga backtrace'ów) po ostatnich zabawach
   z configure (joi)
 * w Makefile'ach modu³ów nowy cel: update-translations (joi)
+* nowa opcja configure: --disable-autodownload, wy³±czaj±ca (uwaga, niespodzianka!)
+  autodownload (joi)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
