--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * w Makefile'ach modu³ów nowy cel: update-translations (joi)
 * nowa opcja configure: --disable-autodownload, wy³±czaj±ca (uwaga, niespodzianka!)
   autodownload (joi)
+* poprawione pozycjonowanie menu kontekstowych (gdy menu otwiera³o siê przy
+  krawêdzi, wybierana by³a od razu pierwsza z brzegu pozycja) (joi)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
