--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   autodownload (joi)
 * poprawione pozycjonowanie menu kontekstowych (gdy menu otwiera³o siê przy
   krawêdzi, wybierana by³a od razu pierwsza z brzegu pozycja) (joi)
+* ustawiania czcionek w module hints znowu dzia³a (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
