--- a/ChangeLog
+++ b/ChangeLog
@@ -46,6 +46,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * opcja pozwalaj±ca w³±czyæ pokazywanie na li¶cie kontaktów anonimów
   z nieodebranymi wiadomo¶ciami (joi)
 * w oknie "O programie" pokazujemy dok³adniesz± informacjê o wersji (joi)
+* przy wy³±czaniu programu zapamiêtujemy listê otwartych okien rozmowy,
+  a przy nastêpnym uruchomieniu odtwarzamy je (joi)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
