stop_search_action
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4119 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -48,6 +48,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * w oknie "O programie" pokazujemy dok³adniesz± informacjê o wersji (joi)
 * przy wy³±czaniu programu zapamiêtujemy listê otwartych okien rozmowy,
   a przy nastêpnym uruchomieniu odtwarzamy je (joi)
+* nowa akcja umo¿liwiaj±ca zatrzymanie wyszukiwania w katalogu (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
