--- a/ChangeLog
+++ b/ChangeLog
@@ -49,6 +49,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przy wy³±czaniu programu zapamiêtujemy listê otwartych okien rozmowy,
   a przy nastêpnym uruchomieniu odtwarzamy je (joi)
 * nowa akcja umo¿liwiaj±ca zatrzymanie wyszukiwania w katalogu (neeo)
+* mo¿liwo¶æ zamkniêcia okna wysy³ania SMS z poziomu informacji o pomy¶lnym
+  przes³aniu wiadomo¶ci (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
