removed unused connects i disconnects
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4126 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -51,8 +51,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nowa akcja umo¿liwiaj±ca zatrzymanie wyszukiwania w katalogu (neeo)
 * mo¿liwo¶æ zamkniêcia okna wysy³ania SMS z poziomu informacji o pomy¶lnym
   przes³aniu wiadomo¶ci (neeo)
-* przycisk wysy³ania wiadomo¶ci w oknie rozmowy jest zablokowany, je¶li pole 
+* przycisk wysy³ania wiadomo¶ci w oknie rozmowy jest zablokowany, je¶li pole
   edycji jest puste (neeo)
+* usuniête po³±czenie do nieistniej±cych slotów w dcc (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
