--- a/ChangeLog
+++ b/ChangeLog
@@ -59,6 +59,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * QString -> const char * w wywo³aniach zwrotnych w notyfikacjach (Vogel)
 * obs³uga wywo³añ zwrotnych w hints (Vogel)
 * usuniêto nieu¿ywan± nigdzie metodê setShown z klasy Hint a tak¿e parametr show z metody set (Vogel)
+* usuniêto nieu¿ywan± nigdzie funkcjê progress z klasy MessageBox (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
