more pretty MessageBox
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4133 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -60,6 +60,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * obs³uga wywo³añ zwrotnych w hints (Vogel)
 * usuniêto nieu¿ywan± nigdzie metodê setShown z klasy Hint a tak¿e parametr show z metody set (Vogel)
 * usuniêto nieu¿ywan± nigdzie funkcjê progress z klasy MessageBox (Vogel)
+* ³adniejsze okno MessageBox
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
